renamed shared struct, moved isowned to helper
