# pkg/api/content_units.go
@@ -1,17 +1,17 @@
 package api
 
-type SharedRepositoryEntityRequest struct {
+type ContentUnitListRequest struct {
 	UUID   string `param:"uuid"`    // Identifier of the repository
 	Search string `query:"search"`  // Search string based query to optionally filter-on
 	SortBy string `query:"sort_by"` // SortBy sets the sort order of the result
 }
 
-type SearchSharedRepositoryEntityRequest struct {
+type ContentUnitSearchRequest struct {
 	URLs   []string `json:"urls,omitempty"`  // URLs of repositories to search
 	UUIDs  []string `json:"uuids,omitempty"` // List of RepositoryConfig UUIDs to search
-	Search string   `json:"search"`          // Search string to search repository entity names
+	Search string   `json:"search"`          // Search string to search content unit names
 	Limit  *int     `json:"limit,omitempty"` // Maximum number of records to return for the search
 }
 
-const SearchSharedRepositoryEntityRequestLimitDefault int = 100
-const SearchSharedRepositoryEntityRequestLimitMaximum int = 500
+const ContentUnitSearchRequestLimitDefault int = 100
+const ContentUnitSearchRequestLimitMaximum int = 500
